--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Week2">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Profile">
+        </activity>
+        <activity android:name=".SignIn">
+        </activity>
+        <activity android:name=".SignUp" />
+        <activity android:name=".Welcome" />
+        <activity android:name=".Onboarding_three" />
+        <activity android:name=".Onboarding_two" />
+        <activity android:name=".Onboarding_one" />
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
